style: add home component

--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -2,6 +2,12 @@
 
 .p-home {
   background-color: $theme-color;
+
+  &__toolbar {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .c-contact {
