--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans|Poppins:400italic,700italic,400,700);
 
 // Abstract files
 @import "./abstracts/_variables.scss";
@@ -13,11 +12,11 @@
 // Components
 @import "./components/_buttons.scss";
 
-// Layout
+// Layout 
 @import "./layout/_navigation.scss";
 
 // Sections
-// @import "./sections/*";
+@import "./sections/_header.scss";
 
-// Pages
-@import "./pages/_login.scss";
+
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans|Poppins:400italic,700italic,400,700);
